Added bootstrap, made new template files

--- a/experiment/sass/style.scss
+++ b/experiment/sass/style.scss
@@ -7,8 +7,8 @@ Description: Just Playing with it :)
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: me_experiment
-Tags: one-column, right-sidebar, left-sidebar, custom-header, custom-background, custom-logo, custom-menu, featured-images,featured-image-header, featured-image-header, full-width-template, flexible-header, theme-options, sticky-posts, rtl-language-support, custom-background, threaded-comments, translation-ready
+Text Domain: experiment
+Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
