--- a/experiment/sass/elements/_elements.scss
+++ b/experiment/sass/elements/_elements.scss
@@ -39,4 +39,7 @@ figure {
 	margin: 1em 0; /* Extra wide images within figure tags don't overflow the content area. */
 }
 
+.site-title{
+	font-size: 30px;
+}
 @import "tables";
